--- a/style.css
+++ b/style.css
@@ -7,16 +7,25 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+header {
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 h1 {
     font-weight: 600;
     letter-spacing: 1.57143px;
     font-size: 36px;
+    line-height: 44px;
+    margin: 0;
 }
 h2 {
     font-weight: normal;
     font-size: 11px;
     text-transform: uppercase;
-}
-h1, h2 {
-    text-align: center;
+    line-height: 13px;
+    margin: 0;
 }
