--- a/style.css
+++ b/style.css
@@ -30,11 +30,19 @@ h2 {
     margin: 0;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+}
+#board {
+    position: relative;
+}
 .card {
     width: 267px;
     height: 354px;
-    background: url(Image.png) solid #FFFFFF;
     box-sizing: border-box;
     box-shadow: 0px 6px 15px rgba(36, 36, 40, 0.08), 0px 1px 3px rgba(36, 36, 40, 0.2);
     border-radius: 12px;
+    position : absolute;
+    background-color: #FFFFFF;
 }
