--- a/style.css
+++ b/style.css
@@ -45,4 +45,11 @@ main {
     border-radius: 12px;
     position : absolute;
     background-color: #FFFFFF;
+    transition: box-shadow 0.5s;
+}
+
+.card:hover {
+    cursor: pointer;
+    box-shadow: 0px 32px 11px rgba(36, 36, 40, 0.08), 0px 32px 59px rgba(36, 36, 40, 0.2);
+    z-index: 300 !important;
 }
