--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 @keyframes title-appearance {
-    0%, 50% { opacity: 0; }
-    100% { opacity: 1; }
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 header {
     height: 30vh;
@@ -26,7 +26,7 @@ h1 {
     font-size: 36px;
     line-height: 44px;
     margin: 0;
-    animation: title-appearance ease-in 3.5s;
+    animation: title-appearance ease-in 1.5s;
 }
 h2 {
     font-weight: normal;
@@ -34,7 +34,7 @@ h2 {
     text-transform: uppercase;
     line-height: 13px;
     margin: 0;
-    animation: title-appearance ease-in 4s;
+    animation: title-appearance ease-in 2s;
 }
 
 main {
