--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 
 * {
     font-family: 'Montserrat', sans-serif;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;   
 }
 
 @keyframes title-appearance {
@@ -44,21 +47,59 @@ main {
 #board {
     position: relative;
 }
-.card {
+.card-container {
     width: 267px;
     height: 354px;
-    box-sizing: border-box;
-    box-shadow: 0px 6px 15px rgba(36, 36, 40, 0.08), 0px 1px 3px rgba(36, 36, 40, 0.2);
-    border-radius: 12px;
     position : absolute;
-    background-color: #FFFFFF;
-    transition: box-shadow 0.5s, top 1s, opacity 1.5s;
+    transition: top 1s, opacity 1.5s;
     top : 100vh;
     opacity: 0;
 }
 
-.card:hover {
+.card-container:hover {
     cursor: pointer;
-    box-shadow: 0px 32px 11px rgba(36, 36, 40, 0.08), 0px 32px 59px rgba(36, 36, 40, 0.2);
     z-index: 300 !important;
+}
+
+.card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    box-shadow: 0px 6px 15px rgba(36, 36, 40, 0.08), 0px 1px 3px rgba(36, 36, 40, 0.2);
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    transition: box-shadow 0.5s, all 0.5s;
+    transform-style: preserve-3d;
+}
+.card:hover {
+    box-shadow: 0px 32px 11px rgba(36, 36, 40, 0.08), 0px 32px 59px rgba(36, 36, 40, 0.2);
+    transform : rotateY(180deg);
+}
+
+.card > figure {
+    position: absolute;
+    margin: 0;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.card > article {
+    position: absolute;
+    margin: 0;
+    padding: 20px;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transform : rotateY(180deg);
+}
+.card > article > p {
+    margin : 0;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column-reverse;
 }
