--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ main {
 }
 .card:hover {
     box-shadow: 0px 32px 11px rgba(36, 36, 40, 0.08), 0px 32px 59px rgba(36, 36, 40, 0.2);
-    transform : rotateY(180deg);
+    t
 }
 
 .card > figure {
